fix: adjust gap

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -6,8 +6,11 @@ main {
 }
 
 .news-container {
+    margin-top: 1.5rem;
+}
+
+.news-container ol {
     display: flex;
     flex-direction: column;
     gap: 8px;
-    margin-top: 1.5rem;
 }
